# docs/swagger.json
@@ -34,7 +34,7 @@
                     "default": {
                         "description": "",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_handler.errorResponse"
                         }
                     }
                 }
@@ -57,7 +57,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_bookstore_internal_handler.bookInput"
+                            "$ref": "#/definitions/internal_handler.bookInput"
                         }
                     }
                 ],
@@ -68,7 +68,7 @@
                     "default": {
                         "description": "",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_handler.errorResponse"
                         }
                     }
                 }
@@ -105,7 +105,7 @@
                     "default": {
                         "description": "",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_handler.errorResponse"
                         }
                     }
                 }
@@ -135,7 +135,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_bookstore_internal_handler.bookInput"
+                            "$ref": "#/definitions/internal_handler.bookInput"
                         }
                     }
                 ],
@@ -146,7 +146,7 @@
                     "default": {
                         "description": "",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_handler.errorResponse"
                         }
                     }
                 }
@@ -178,7 +178,7 @@
                     "default": {
                         "description": "",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_handler.errorResponse"
                         }
                     }
                 }
@@ -201,6 +201,14 @@
                 }
             }
         },
+        "github.com_alseiitov_bookstore_internal_handler.errorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "internal_handler.bookInput": {
             "type": "object",
             "required": [
@@ -212,6 +220,14 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_handler.errorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
