# internal/handler/books.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	_ "github.com/alseiitov/bookstore/internal/model"
+	"github.com/alseiitov/bookstore/internal/service"
 	"github.com/gin-gonic/gin"
 )
 
@@ -13,18 +14,22 @@ type bookInput struct {
 	Author string `json:"author" binding:"required,max=255"`
 }
 
+type errorResponse struct {
+	Error string `json:"error"`
+}
+
 // @Summary Get all books
 // @Tags books
 // @ModuleID GetAllBooks
 // @Accept  json
 // @Produce  json
 // @Success 200 {array} model.Book
-// @Failure default {string} string
+// @Failure default {object} errorResponse
 // @Router /books [get]
 func (h *Handler) GetAllBooks(ctx *gin.Context) {
 	books, err := h.services.Books.GetAll()
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusInternalServerError, errorResponse{err.Error()})
 		return
 	}
 
@@ -38,18 +43,22 @@ func (h *Handler) GetAllBooks(ctx *gin.Context) {
 // @Produce  json
 // @Param id path int true "ID of book"
 // @Success 200 {object} model.Book
-// @Failure default {string} string
+// @Failure default {object} errorResponse
 // @Router /books/{id} [get]
 func (h *Handler) GetBook(ctx *gin.Context) {
 	bookID, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusBadRequest, errorResponse{err.Error()})
 		return
 	}
 
 	book, err := h.services.Books.GetByID(bookID)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		if err == service.ErrBookNotFound {
+			ctx.JSON(http.StatusNotFound, errorResponse{err.Error()})
+		} else {
+			ctx.JSON(http.StatusInternalServerError, errorResponse{err.Error()})
+		}
 		return
 	}
 
@@ -63,20 +72,20 @@ func (h *Handler) GetBook(ctx *gin.Context) {
 // @Produce  json
 // @Param input body bookInput true "book info"
 // @Success 201 "ok"
-// @Failure default {string} string
+// @Failure default {object} errorResponse
 // @Router /books [post]
 func (h *Handler) AddBook(ctx *gin.Context) {
 	var input bookInput
 
 	err := ctx.BindJSON(&input)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusBadRequest, errorResponse{err.Error()})
 		return
 	}
 
 	err = h.services.Books.Create(input.Name, input.Author)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusInternalServerError, errorResponse{err.Error()})
 		return
 	}
 
@@ -91,26 +100,30 @@ func (h *Handler) AddBook(ctx *gin.Context) {
 // @Param id path int true "ID of book"
 // @Param input body bookInput true "book info"
 // @Success 200 "ok"
-// @Failure default {string} string
+// @Failure default {object} errorResponse
 // @Router /books/{id} [put]
 func (h *Handler) UpdateBook(ctx *gin.Context) {
 	var input bookInput
 
 	err := ctx.BindJSON(&input)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusBadRequest, errorResponse{err.Error()})
 		return
 	}
 
 	bookID, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusBadRequest, errorResponse{err.Error()})
 		return
 	}
 
 	err = h.services.Books.Update(bookID, input.Name, input.Author)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		if err == service.ErrBookNotFound {
+			ctx.JSON(http.StatusNotFound, errorResponse{err.Error()})
+		} else {
+			ctx.JSON(http.StatusInternalServerError, errorResponse{err.Error()})
+		}
 		return
 	}
 
@@ -124,18 +137,18 @@ func (h *Handler) UpdateBook(ctx *gin.Context) {
 // @Produce  json
 // @Param id path int true "ID of book"
 // @Success 204 "ok"
-// @Failure default {string} string
+// @Failure default {object} errorResponse
 // @Router /books/{id} [delete]
 func (h *Handler) DeleteBook(ctx *gin.Context) {
 	bookID, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusBadRequest, errorResponse{err.Error()})
 		return
 	}
 
 	err = h.services.Books.Delete(bookID)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, err.Error())
+		ctx.JSON(http.StatusInternalServerError, errorResponse{err.Error()})
 		return
 	}
 
